fix: gap max-width changed

--- a/src/containers/ContactUs/components/ContactForm/ContactForm.module.scss
+++ b/src/containers/ContactUs/components/ContactForm/ContactForm.module.scss
@@ -37,7 +37,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  @media (max-width: 768px) {
+  @media (max-width: 1200px) {
     gap: 20px;
   }
 }
